--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
     <h1>how to make a computer game</h1>
     <h2>what is an algorithm?</h2>
     <p>A set of rules.</p>
-    <img src="https://i.gadgets360cdn.com/large/ubisoft_1560240684246.jpg" />
+    <h2>Percy v Gary</h2>
+    <iframe src="https://scratch.mit.edu/projects/398366205/embed" allowtransparency="true" width="100%" height="600" frameborder="0" scrolling="no" allowfullscreen></iframe>
+
 </html>
