--- a/index.html
+++ b/index.html
@@ -3,6 +3,5 @@
     <h2>what is an algorithm?</h2>
     <p>A set of rules.</p>
     <h2>Percy v Gary</h2>
-    <iframe src="https://scratch.mit.edu/projects/398366205/embed" allowtransparency="true" width="100%" height="600" frameborder="0" scrolling="no" allowfullscreen></iframe>
-
+    <iframe src="https://scratch.mit.edu/projects/398366205/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </html>
