picos lava leap

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
     <h1>how to make a computer game</h1>
     <h2>what is an algorithm?</h2>
     <p>A set of rules.</p>
+
     <h2>Percy v Gary</h2>
     <iframe src="https://scratch.mit.edu/projects/398366205/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+
+    <h2>Pico's Lava Leap</h2>
+    <iframe src="https://scratch.mit.edu/projects/398544057/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </html>
