--- a/index.html
+++ b/index.html
@@ -8,4 +8,7 @@
 
     <h2>Pico's Lava Leap</h2>
     <iframe src="https://scratch.mit.edu/projects/398544057/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+
+    <h2 id="dragon-attack">Dragon Attack</h2>
+    <iframe src="https://scratch.mit.edu/projects/399803660/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </html>
